samples/_failures_safe/1761347033_c629db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3f0ba03.c: In function ‘main’:
./samples/SAFE/__tmp_f3f0ba03.c:148:13: error: expected declaration or statement at end of input
  148 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_f3f0ba03.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3f0ba03.c:148:13: error: expected declaration or statement at end of input
